--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     var end_exp = {
         type: jsPsychHtmlButtonResponse,
         stimulus: '<img src="IMG/UNAM.svg" style = "max-width:100%; height:auto;"></img><p style= "font-size:30px;"><strong>¡Muchas gracias por participar!</strong></p><p style= "font-size:20px;">Cualquier duda o aclaración puede comunicarse con el Dr. Luis Llamas Alonso al correo electronico: luigimon@gmail.com.</p>',
-        choices: ['Finalizar'],
+        choices: ['Enviar respuestas'],
         data:{stimulus:"Ending"}
     }
 
