--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="jspsych/dist/jspsych.js"></script>
     <script src="https://brain2ai.github.io/jsPsychSheet/jspsychsheet.js"></script>
     <link rel="stylesheet" href="https://brain2ai.github.io/jsPsychSheet/jspsychsheet.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="jspsych/dist/plugin-html-button-response.js"></script>
     <script src="jspsych/dist/plugin-survey-text.js"></script>
     <script src="jspsych/dist/plugin-html-keyboard-response.js"></script>
@@ -46,7 +46,7 @@
     });
 
 
-    /* var consent = {
+     var consent = {
         type: jsPsychHtmlButtonResponse,
         stimulus: '<p style="font-size:20px;"><strong>CONSENTIMIENTO INFORMADO</strong></p>' + '<div style="text-align: justify;">'+
               '<p>Por medio del presente acepto participar en el proyecto de investigación: <strong>"Normas de palabras afectivas en población mexicana"</strong>. <br>Este estudio tiene como objetivo estudiar las emociones y cómo las personas responden a diferentes tipos de palabras.</p>' +
@@ -68,7 +68,7 @@
     timeline.push(consent); 
     
 
-    var birthdate = {
+   /* var birthdate = {
         type: jsPsychSurveyHtmlForm,
         preamble: 'Fecha de nacimiento:',
         html: '<p><input type="date" id="dob_1" name="dob_2" required></p>',
